--- a/notebooks/diff-eqs.ipynb
+++ b/notebooks/diff-eqs.ipynb
@@ -28,7 +28,11 @@
    "id": "3056f4af",
    "metadata": {},
    "source": [
-    "## Jordi: why I love Julia\n",
+    "## Jordi Bolibar (GitHub: [@JordiBolibar](https://github.com/JordiBolibar))\n",
+    "Institut des Géosciences de l'Environnement <br>\n",
+    "Université Grenoble Alpes (France)\n",
+    "\n",
+    "### Why I love Julia\n",
     "\n",
     "- Syntax and expressivity\n",
     "- Modern and efficient package and environment manager\n",
