--- a/notebooks/julia-basics.ipynb
+++ b/notebooks/julia-basics.ipynb
@@ -271,7 +271,7 @@
     "###  Let's get our hands dirty!\n",
     "\n",
     "Fire up your JupyterHub:\n",
-    "- go to TODO\n",
+    "- go to Jupyter Hub server on `egu2024.glads.net`\n",
     "- log in with a username and password of your choice\n",
     "- -> if it does not work than someone took that username already (or the server crashed)"
    ],
