--- a/notebooks/geo-ecosystem.ipynb
+++ b/notebooks/geo-ecosystem.ipynb
@@ -66,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Desktop/Julia-intro-for-geoscience-EGU2024`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using Pkg; Pkg.activate(\"../\")"
    ]
@@ -270,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic plots ans statistics"
+    "## Basic plots and statistics"
    ]
   },
   {
@@ -454,7 +446,7 @@
     }
    ],
    "source": [
-    "# or, if you to take a look at the first 12 slices, then doing the following get you there:\n",
+    "# or, if you to take a look at the first 12 slices, then doing the following will get you there:\n",
     "fig = Figure(; size = (1200, 300))\n",
     "axs = [Axis(fig[i,j]) for i in 1:2 for j in 1:6]\n",
     "[heatmap!(axs[i], c_small[Ti=i]) for i in 1:12]\n",
