--- a/notebooks/geo-ecosystem.ipynb
+++ b/notebooks/geo-ecosystem.ipynb
@@ -653,7 +653,7 @@
     }
    ],
    "source": [
-    "Pkg.add(\"GeoMakie\")"
+    "# Pkg.add(\"GeoMakie\")"
    ]
   },
   {
@@ -722,5 +722,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
